core: Declare environ for macOS and others.

* src/spawn-posix.c (environ): Declare.
--

GnuPG-bug-id: 7169